--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>login screen test</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form method="post">
-        <caption> log into your account !</caption><br>
-        <input type=email id=email name=email placeholder="put ur email" required>
-        <br><input type=password id=password name=senha placeholder="put a strong password :)" required>
-        <br><input type=submit value="login finished!!">
-    </form>
+    <div id="loginscreen">
+        <form method="post">
+            <caption id="legenda"> log into your account !</caption><br>
+            <input type=email id=email name=email placeholder="put ur email" required>
+            <br><input type=password id=password name=senha placeholder="put a strong password :" required>
+            <br><input id=login-btn type=submit value="login finished!!">
+        </form>
+    </div>
 </body>
 </html>
