--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <div id="loginscreen">
         <form method="post">
-            <caption id="legenda"> log into your account !</caption><br>
+            <h1 id="legenda"> log into your account !</h1><br>
             <input type=email id=email name=email placeholder="put ur email" required>
-            <br><input type=password id=password name=senha placeholder="put a strong password :" required>
-            <br><input id=login-btn type=submit value="login finished!!">
+            <br><input type=password id=password name=senha placeholder="put a strong password" required>
+            <br><button type="submit">login finished!</button>
         </form>
     </div>
 </body>
-</html>
+</html
