Update login form placeholders and button text

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login screen test</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="loginscreen">
         <form method="post">
-            <h1 id="legenda"> log into your account !</h1><br>
-            <input type=email id=email name=email placeholder="put ur email" required>
-            <br><input type=password id=password name=senha placeholder="put a strong password" required>
-            <br><button type="submit">login finished!</button>
+            <h1 id="legenda"> log into your account !</h1>
+            <input type="email" id="email" name="email" placeholder="enter your email" required>
+            <input type="password" id="password" name="password" placeholder="enter a strong password" required>
+            <button type="submit">submit here!</button>
         </form>
     </div>
 </body>
-</html
+</html>
